@@ -1,17 +1,18 @@
 package com.example.attendance_system.service;
 
-import com.example.attendance_system.dto.PersonDtoFactory;
+import com.example.attendance_system.util.ExceptionMessage;
+import com.example.attendance_system.util.PersonDtoFactory;
 import com.example.attendance_system.dto.PersonDto;
+import com.example.attendance_system.exception.UserNotFoundException;
 import com.example.attendance_system.model.Person;
+import com.example.attendance_system.model.User;
 import com.example.attendance_system.repo.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -19,46 +20,96 @@ public class UserService {
 
     private final UserRepository userRepository;
 
-    public List<PersonDto> getAllStudents() {
-        Optional<List<Person>> optionalList = userRepository.findAllStudents();
+//    public List<PersonDto> getAllStudents() {
+//        Optional<List<Person>> optionalList = userRepository.findAllStudents();
+//
+//        return optionalList.map(students -> {
+//            students.forEach(student -> student.setUserId(userRepository.getUserIdFromPerson(student.getId())));
+//            return students.stream()
+//                    .map(PersonDtoFactory::convert)
+//                    .collect(Collectors.toList());
+//        }).orElse(Collections.emptyList());
+//    }
+//
+//    public List<PersonDto> getAllTeachers() {
+//        Optional<List<Person>> optionalList = userRepository.findAllTeachers();
+//
+//        return optionalList.map(teachers -> {
+//            teachers.forEach(teacher -> teacher.setUserId(userRepository.getUserIdFromPerson(teacher.getId())));
+//            return teachers.stream()
+//                    .map(PersonDtoFactory::convert)
+//                    .collect(Collectors.toList());
+//        }).orElse(Collections.emptyList());
+//
+//    }
+//
+//
+//    public Optional<PersonDto> getStudentById(Integer studentId) {
+//        checkStudentExists(studentId);
+//
+//        return userRepository.findStudentById(studentId)
+//                .map(student -> {
+//                    student.setUserId(studentId);
+//                    return student;
+//                })
+//                .map(PersonDtoFactory::convert);
+//
+//    }
+//
+//    public Optional<PersonDto> getTeacherById(Integer teacherId) {
+//        checkTeacherExists(teacherId);
+//        return userRepository.findTeacherById(teacherId)
+//                .map(teacher -> {
+//                    teacher.setUserId(teacherId);
+//                    return teacher;
+//                })
+//                .map(PersonDtoFactory::convert);
+//    }
 
-        return optionalList.map(students -> {
-            students.forEach(student -> student.setUserId(userRepository.getUserIdFromPerson(student.getId())));
-            return students.stream()
-                    .map(PersonDtoFactory::convert)
-                    .collect(Collectors.toList());
-        }).orElse(Collections.emptyList());
+    public List<PersonDto> getAllStudents() {
+        List<Person> students = userRepository.findAllStudents();
+
+        return students
+                .stream()
+                .map(PersonDtoFactory::convert)
+                .toList();
     }
 
     public List<PersonDto> getAllTeachers() {
-        Optional<List<Person>> optionalList = userRepository.findAllTeachers();
+        List<Person> teachers = userRepository.findAllTeachers();
 
-        return optionalList.map(teachers -> {
-            teachers.forEach(teacher -> teacher.setUserId(userRepository.getUserIdFromPerson(teacher.getId())));
-            return teachers.stream()
-                    .map(PersonDtoFactory::convert)
-                    .collect(Collectors.toList());
-        }).orElse(Collections.emptyList());
-
+        return teachers
+                .stream()
+                .map(PersonDtoFactory::convert)
+                .toList();
     }
 
+    public PersonDto getStudentById(Integer studentId) {
+        checkStudentExists(studentId);
 
-    public Optional<PersonDto> getStudentById(Integer studentId) {
         return userRepository.findStudentById(studentId)
-                .map(student -> {
-                    student.setUserId(studentId);
-                    return student;
-                })
-                .map(PersonDtoFactory::convert);
+                .map(PersonDtoFactory::convert)
+                .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.studentNotFound(studentId)));
 
     }
 
-    public Optional<PersonDto> getTeacherById(Integer teacherId) {
+    public PersonDto getTeacherById(Integer teacherId) {
         return userRepository.findTeacherById(teacherId)
-                .map(teacher -> {
-                    teacher.setUserId(teacherId);
-                    return teacher;
-                })
-                .map(PersonDtoFactory::convert);
+                .map(PersonDtoFactory::convert)
+                .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.teacherNotFound(teacherId)));
+    }
+
+    public void checkStudentExists(Integer studentId) {
+        if (!userRepository.existsStudentById(studentId))
+            throw new UserNotFoundException(ExceptionMessage.studentNotFound(studentId));
+    }
+
+    public void checkTeacherExists(Integer teacherId) {
+        if (!userRepository.existsTeacherById(teacherId))
+            throw new UserNotFoundException(ExceptionMessage.teacherNotFound(teacherId));
+    }
+
+    public User getCurrentUser() {
+        return (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
     }
 }
